--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,33 @@
-node_modules
-.angular/cache/19.1.8/Goaltrack/.tsbuildinfo
+# Compiled output
+/dist
+/out-tsc
+
+# Dependencies
+/node_modules
+
+# IDEs and editors
+.idea/
+.vscode/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+
+# Test results and coverage
+/coverage
+
+# Angular CLI artifacts
+/angular.json
+/package-lock.json
+/.angular/cache/*
+
+# Optional: OS-specific files
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
+
+# Temporary files
+*~
+.angular/cache/**
