--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^19.1.7",
     "@angular/platform-browser-dynamic": "^19.1.7",
     "@angular/router": "^19.1.7",
+    "@ngneat/until-destroy": "^10.0.0",
     "@ngrx/component-store": "^19.0.1",
     "@ngrx/effects": "^19.0.1",
     "@ngrx/entity": "^19.0.1",
