--- a/angular.json
+++ b/angular.json
@@ -37,11 +37,18 @@
           },
           "configurations": {
             "production": {
+              "optimization": {
+                "scripts": true,
+                "styles": {
+                    "minify": true,
+                    "inlineCritical": false
+                }
+              },
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+                  "maximumWarning": "2gb",
+                  "maximumError": "4gb"
                 },
                 {
                   "type": "anyComponentStyle",
